finished fixing contrast issues on files and uploads page

--- a/cms/static/sass/elements/_uploaded-assets.scss
+++ b/cms/static/sass/elements/_uploaded-assets.scss
@@ -141,13 +141,13 @@
         .date-col {
           @include transition(all $tmg-f2 ease-in-out 0s);
           @extend %t-copy-sub2;
-          color: $gray-l2;
+          color: $gray-d1;
         }
 
         .embed-col {
           @include transition(all $tmg-f2 ease-in-out 0s);
           padding-left: ($baseline*0.75);
-          color: $gray-l2;
+          color: $gray-d1;
 
           .embeddable-xml-input {
             @include transition(all $tmg-f2 ease-in-out 0s);
@@ -156,7 +156,7 @@
             border: 1px solid transparent;
             background: none;
             width: 100%;
-            color: $gray-l2;
+            color: $gray-d1;
 
             &:focus {
               background-color: $white;
